fixed button spacing with css

--- a/src/App.css
+++ b/src/App.css
@@ -57,10 +57,11 @@
   object-fit: fill;
 }
 .sidetabs {
-  min-width: 250px;
+  min-width: 280px;
+  max-height: 100vh;
   overflow-y: auto;
   margin: 3px 4px 3px 4px;
-  z-index: 1;
+  /* z-index: 1; */
   /* 
   background-color: rgb(90, 74, 74); */
 }
@@ -69,6 +70,10 @@
   /* background-color: rgb(63, 63, 63); */
   background-image: url("./css-assets/welcomeBackground.jpeg");
   /* color: white */
+}
+
+.ui.menu:not(.vertical) .item {
+  width: 33% !important;
 }
 
 /* viewport example */
